...
        loginButton.frame = loginoutframe;
        loginButton.titleLabel.adjustsFontSizeToFitWidth = YES;
        loginButton.titleLabel.font = [UIFont systemFontOfSize:28];
        loginButton.titleLabel.adjustsFontSizeToFitWidth = YES;
        [loginButton setTitleColor:[UIColor whiteColor] forState:UIControlStateNormal];
        loginButton.backgroundColor = [UIColor redColor];
        [loginButton setTitle:@"Please Log In" forState:UIControlStateNormal];
        [loginButton addTarget:self action:@selector(onLogInButtonClicked:) forControlEvents:UIControlEventTouchUpInside];
        [self.view addSubview:loginButton];
        [sendEmail enable:NO];
        [clientsButton enable:NO] ;
    }
    else
...
