...
    {
        cell.isNewPropertyCell = YES;
    }
    
    UIButton *downloadButton = [UIButton buttonWithType:UIButtonTypeRoundedRect];
    [downloadButton setBackgroundColor:[UIColor bikeFitBlue]];
    [downloadButton setTitle:@"Done" forState:UIControlStateNormal];
    [downloadButton setFrame:CGRectMake(0, 0, 100, 35)];
    [downloadButton addTarget:self action:@selector(endEditing:) forControlEvents:UIControlEventTouchUpInside];
    cell.editingAccessoryView = downloadButton;
    
    
    NSString *propertyName = [propertyNames objectAtIndex:[indexPath row]];
...
